delete and add items

--- a/public/style.styl
+++ b/public/style.styl
@@ -3,10 +3,11 @@ body
 
 #pros
   background-color #bfb
-  border-radius 6px
 
 #cons
   background-color #fbb
+
+.prosAndCons .panel
   border-radius 6px
 
 .prosAndCons
@@ -15,10 +16,12 @@ body
 
   & input
     border none
-    border-bottom 1px solid green
+    border-bottom 1px solid #999
+    font-style italic
     background none
     outline none
     box-shadow  none
 
-  & input.cons
-    border-bottom 1px solid red
+  & .glyphicon
+    font-size 16px
+    margin-left 10px
