--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,5 +1,5 @@
 
-/* line 25 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
+/* line 28 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
 
 /* line 1 : C:\Users\Shaun\Documents\GitHub\prosvcons\node_modules\stylus\lib\functions\index.styl */
 
@@ -11,31 +11,36 @@ body {
 /* line 4 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
 #pros {
   background-color: #bfb;
-  border-radius: 6px;
 }
 
-/* line 8 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
+/* line 7 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
 #cons {
   background-color: #fbb;
+}
+
+/* line 10 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
+.prosAndCons .panel {
   border-radius: 6px;
 }
 
-/* line 12 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
+/* line 13 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
 .prosAndCons {
   margin: 0;
   font-size: 24px;
 }
 
-/* line 16 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
+/* line 17 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
 .prosAndCons input {
   border: none;
-  border-bottom: 1px solid #008000;
+  border-bottom: 1px solid #999;
+  font-style: italic;
   background: none;
   outline: none;
   box-shadow: none;
 }
 
-/* line 23 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
-.prosAndCons input.cons {
-  border-bottom: 1px solid #f00;
+/* line 25 : C:\Users\Shaun\Documents\GitHub\prosvcons\public\style.styl */
+.prosAndCons .glyphicon {
+  font-size: 16px;
+  margin-left: 10px;
 }
