--- a/views/layout.jade
+++ b/views/layout.jade
@@ -36,3 +36,4 @@ html
                 a(href="http://www.shaunkatona.com", target="_BLANK") Shaun Katona
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
         script(type="text/javascript", src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
+        block scripts
