--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -1,18 +1,29 @@
 body
   padding-top 70px
 
+ul.nav .glyphicon
+  font-size 17px
+  margin-right 5px
+
 #pros
   background-color #bfb
 
 #cons
   background-color #fbb
 
-.prosAndCons .panel
-  border-radius 6px
+h1 a
+  color #ccc
+  font-size 20px
+
+h1 a:hover
+  text-decoration none
+  color black
 
 .prosAndCons
   margin 0
-  font-size 24px
+
+  & .panel
+    border-radius 6px
 
   & input
     border none
@@ -22,7 +33,8 @@ body
     outline none
     box-shadow  none
     width 100%
+    font-size 20px
 
-  & .glyphicon
+  & .glyphicon-trash
     font-size 16px
     margin-left 10px
