--- a/views/layout.jade
+++ b/views/layout.jade
@@ -59,6 +59,7 @@ html
             footer.footer
                 | This site created by&nbsp;
                 a(href="http://www.shaunkatona.com", target="_BLANK") Shaun Katona
+        script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.19/angular.min.js")
         script(type="text/javascript", src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js")
         script(type="text/javascript", src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js")
         block scripts
