--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,14 +26,14 @@ h1 a:hover {
   border-radius: 6px;
 }
 .prosAndCons input {
-  border: none;
-  border-bottom: 1px solid #999;
   font-style: italic;
-  background: none;
-  outline: none;
-  box-shadow: none;
   width: 100%;
   font-size: 20px;
+  box-shadow: none;
+  outline: none;
+}
+.prosAndCons input.ng-dirty.ng-invalid {
+  border-color: #f00;
 }
 .prosAndCons .glyphicon-trash {
   font-size: 16px;
