--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -26,15 +26,16 @@ h1 a:hover
     border-radius 6px
 
   & input
-    border none
-    border-bottom 1px solid #999
     font-style italic
-    background none
-    outline none
-    box-shadow  none
     width 100%
     font-size 20px
+    box-shadow none
+    outline none
 
+    &.ng-dirty.ng-invalid
+      border-color red
+    
+    
   & .glyphicon-trash
     font-size 16px
     margin-left 10px
