--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -19,6 +19,13 @@ h1 a:hover
   text-decoration none
   color black
 
+.ng-dirty.ng-invalid
+  border-color red
+
+input[type="text"]
+  box-shadow none
+  outline none
+
 .prosAndCons
   margin 0
 
@@ -31,10 +38,6 @@ h1 a:hover
     font-size 20px
     box-shadow none
     outline none
-
-    &.ng-dirty.ng-invalid
-      border-color red
-    
     
   & .glyphicon-trash
     font-size 16px
