--- a/views/index.jade
+++ b/views/index.jade
@@ -7,14 +7,14 @@ block scripts
     script(type="text/javascript", src="scripts/index.js")
 block content
     .row
-        form(name="titleForm", ng-submit="AppCtrl.saveTitle")
+        form(name="titleForm", ng-submit="AppCtrl.saveTitle()" novalidate)
             h1.text-center
-                .titleTextWrapper(ng-hide="AppCtrl.showTitleInput")
-                    span Add a title...
-                    a(href="javascript: void(0);", ng-click="AppCtrl.toggleTitleInput()").glyphicon.glyphicon-pencil
-                .titleInputWrapper(ng-show="AppCtrl.showTitleInput")
-                    input(type="text", ng-model="AppCtrl.title")
-                    a(href="javascript: void(0);", ng-click="AppCtrl.toggleTitleInput()").glyphicon.glyphicon-remove
+                .titleTextWrapper(ng-hide="AppCtrl.titleInputVisible")
+                    span {{AppCtrl.title}}
+                    a(href="javascript: void(0);", ng-click="AppCtrl.showTitleInput()").glyphicon.glyphicon-pencil
+                .titleInputWrapper(ng-show="AppCtrl.titleInputVisible")
+                    input(id="titleInput", name="titleInput", type="text", ng-model="AppCtrl.title")
+                    a(href="javascript: void(0);", ng-click="AppCtrl.cancelTitleInput()").glyphicon.glyphicon-remove
                         | cancel
 
             div.checkbox
