--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,10 +33,12 @@ html
                             a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
                                 .glyphicon.glyphicon-th-list
                                 | My Lists
+                                span.badge 5
                                 span.caret
                             ul.dropdown-menu(role="menu")
                                 li.dropdown-header
                                     | Public
+                                    span.badge 3
                                 li
                                     a(href="javascript: void(0);") List #1
                                 li
@@ -46,6 +48,7 @@ html
                                 li.divider
                                 li.dropdown-header
                                     | Private
+                                    span.badge 2
                                     li
                                         a(href="javascript: void(0);") List #4
                                     li
