--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -1,6 +1,11 @@
 body
   padding-top 70px
 
+.dropdown
+  & .badge
+    margin-left 5px
+    margin-right 5px
+
 ul.nav .glyphicon
   font-size 17px
   margin-right 5px
@@ -25,6 +30,7 @@ h1 a:hover
 input[type="text"]
   box-shadow none
   outline none
+  width 100%
 
 .prosAndCons
   margin 0
@@ -42,3 +48,12 @@ input[type="text"]
   & .glyphicon-trash
     font-size 16px
     margin-left 10px
+
+a.cancelTitle
+  font-size 15px
+
+  & .glyphicon-remove
+    padding-right 5px
+
+a.glyphicon-pencil
+  margin-left 5px
