--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -24,6 +24,11 @@ h1 a:hover
   text-decoration none
   color black
 
+table
+  & thead
+    & th
+      font-size 25px
+
 .ng-dirty.ng-invalid
   border-color red
 
