--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -24,6 +24,14 @@ h1 a:hover
   text-decoration none
   color black
 
+.jumbotron
+  .glyphicon
+    font-size 100px
+    margin-left 50px
+
+    &.glyphicon-thumbs-up
+      margin-left 100px
+
 table
   & thead
     & th
