--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -23,6 +23,13 @@ h1 a:hover {
   text-decoration: none;
   color: #000;
 }
+.jumbotron .glyphicon {
+  font-size: 100px;
+  margin-left: 50px;
+}
+.jumbotron .glyphicon.glyphicon-thumbs-up {
+  margin-left: 100px;
+}
 table thead th {
   font-size: 25px;
 }
