--- a/stylus/stylesheets/style.styl
+++ b/stylus/stylesheets/style.styl
@@ -32,9 +32,14 @@ h1 a:hover
     &.glyphicon-thumbs-up
       margin-left 100px
 
+@media only screen and (min-width: 0px) and (max-width: 992px)
+  .jumbotron
+    .glyphicon
+      display none
+
 table
-  & thead
-    & th
+  thead
+    th
       font-size 25px
 
 .ng-dirty.ng-invalid
@@ -48,24 +53,24 @@ input[type="text"]
 .prosAndCons
   margin 0
 
-  & .panel
+  .panel
     border-radius 6px
 
-  & input
+  input
     font-style italic
     width 100%
     font-size 20px
     box-shadow none
     outline none
     
-  & .glyphicon-trash
+  .glyphicon-trash
     font-size 16px
     margin-left 10px
 
 a.cancelTitle
   font-size 15px
 
-  & .glyphicon-remove
+  .glyphicon-remove
     padding-right 5px
 
 a.glyphicon-pencil
