starting saving/loading
only saves the title right now.  displays them in the My Lists dropdown
(after you refresh).

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -33,21 +33,18 @@ html
                             a.dropdown-toggle(data-toggle="dropdown", href="javascript: void(0);")
                                 .glyphicon.glyphicon-th-list
                                 | My Lists
-                                span.badge 5
+                                span.badge #{myLists.length}
                                 span.caret
                             ul.dropdown-menu(role="menu")
                                 li.dropdown-header
                                     | Public
-                                    span.badge 3
-                                li
-                                    a(href="javascript: void(0);") List #1
-                                li
-                                    a(href="javascript: void(0);") List #2
-                                li
-                                    a(href="javascript: void(0);") List #3
+                                    span.badge #{myLists.length}
+                                each myList in myLists
+                                    li
+                                        a(href="javascript: void(0);") #{myList.title}
                                 li.divider
                                 li.dropdown-header
-                                    | Private
+                                    | Private - not real
                                     span.badge 2
                                     li
                                         a(href="javascript: void(0);") List #4
